<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.remedy.alpha.UI.ContactTypeActivity">

    <RelativeLayout
        android:id="@+id/contactHeaderRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/contactHeaderBGImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/contact_bg"
            android:contentDescription="@string/contact_bg_img"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/contact_text_view"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="230dp">

            <Button
                android:id="@+id/callButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:background="@drawable/round_button_bg"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/call_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/chatButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_button_bg"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/chat_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:typeface="normal" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
