<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.remedy.alpha.UI.ProbDescActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/probHeaderRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/probHeaderBGImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/prob_desc_bg"
            android:contentDescription="@string/prob_desc_bg_img"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/desc_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/probDescSpinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/spinner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/probHeaderRelativeLayout" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginEnd="135dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_button_bg"
        android:fontFamily="@font/roboto"
        android:text="@string/enter_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/probDescSpinner" />

    <RadioGroup
        android:id="@+id/probPageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="132dp"
        android:checkedButton="@+id/pageOneRadioButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/probPageOneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:id="@+id/probPageTwoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/probPageThreeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
